# remote_control

./: .gitignore  README.md
common/: packet.h
linux/: client.cpp  server.cpp
windows/: CMakeLists.txt  client.cpp  server.cpp
